--- a/practice04/package.json
+++ b/practice04/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "@mdi/font": "5.9.55",
     "@vue/cli": "^5.0.8",
     "core-js": "^3.8.3",
